--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #
-logging.level.org.springframework.data=INFO
+logging.level.org.springframework.data=DEBUG
 #
-logging.level.org.springframework=INFO
+logging.level.org.springframework=DEBUG
+#
+#logging.file.name=logs/order-service.log
