--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,15 @@ plugins {
 	id 'org.springframework.boot' version '3.1.1'
 	id 'io.spring.dependency-management' version '1.1.0'
 	id 'org.graalvm.buildtools.native' version '0.9.23'
+	id "io.freefair.lombok" version "8.3"
 }
 
-group = 'vn.bloglaptrinh'
+group = 'io.digital101'
 version = '0.0.1'
 
 java {
 	sourceCompatibility = '17'
 }
-
 
 repositories {
 	mavenCentral()
@@ -24,12 +24,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 	implementation 'org.postgresql:postgresql'
-//	implementation 'org.liquibase:liquibase-core:4.22.0'
 
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
 //	runtimeOnly 'javax.activation:activation:1.1.1'
 //	runtimeOnly 'org.liquibase.ext:liquibase-hibernate6:4.22.0'
+//	implementation 'org.liquibase:liquibase-core:4.22.0'
+
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
