security with jwt + jdbc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,12 @@ spring.sql.init.data-locations=classpath*:db/changelog/data-0.0.1.sql
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
 #
-logging.level.org.springframework.data=INFO
+jwt.private.key=classpath:app.key
+jwt.public.key=classpath:app.key.pub
 #
-logging.level.org.springframework=INFO
+spring.profiles.active=rest
+#
+logging.level.org.springframework.data=debug
+#
+logging.level.org.springframework=debug
