--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@ plugins {
 	id 'java'
 	id 'war'
 	id 'org.springframework.boot' version '3.1.1'
-	id 'io.spring.dependency-management' version '1.1.0'
+	id 'io.spring.dependency-management' version '1.1.3'
+//	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'org.graalvm.buildtools.native' version '0.9.23'
 }
 
@@ -19,23 +20,27 @@ repositories {
 }
 
 dependencies {
+	implementation files('app.key')
+	implementation files('app.key.pub')
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 	implementation 'org.postgresql:postgresql'
 //	implementation 'org.liquibase:liquibase-core:4.22.0'
-
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-
 //	runtimeOnly 'javax.activation:activation:1.1.1'
 //	runtimeOnly 'org.liquibase.ext:liquibase-hibernate6:4.22.0'
+
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
 	testImplementation 'org.springframework.boot:spring-boot-docker-compose'
 	testImplementation 'org.testcontainers:junit-jupiter'
+	testImplementation 'commons-codec:commons-codec:1.15'
+
 }
 
 tasks.named('test') {
